[tool.poetry]
name = "repl_python3_rBot-1"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
google-auth-oauthlib = "^0.4.4"
discord = "^1.0.1"
google-api-python-client = "^2.9.0"
flask = "^2.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
